--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mysql2": "^1.5.1",
+    "mssql": "^4.1.0",
     "reflect-metadata": "^0.1.10",
     "sequelize": "^4.37.5",
     "sequelize-typescript": "^1.0.0-alpha.1",
-    "strong-error-handler": "^2.3.0"
+    "strong-error-handler": "^2.3.0",
+    "tedious": "^2.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.0.39",
